<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="@string/wsg"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="DuplicateIds" />

        <EditText
            android:id="@+id/editTextText1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_log"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/entemail"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/un"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_log"
            android:ems="10"
            android:hint="@string/eun"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/pwd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_log"
            android:ems="10"
            android:hint="@string/epwd"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/cpwd"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/edittext_log"
            android:ems="10"
            android:hint="@string/cfpwd"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonsign"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sg" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>