<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="44dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds" />

            <EditText
                android:id="@+id/editTextText1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12sp"
                android:background="@drawable/edittext_log"
                android:ems="10"
                android:hint="@string/entemail"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pwd"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12sp"
                android:background="@drawable/edittext_log"
                android:ems="10"
                android:hint="@string/epwd"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="22dp"
                android:text="@string/fpwd"
                android:textAlignment="center" />

            <Button
                android:id="@+id/lbutton"
                android:layout_width="364dp"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/lg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:text="----------OR----------"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="76dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/google" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="116dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/facebook" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="102dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/linkedin" />
            </LinearLayout>

            <Button
                android:id="@+id/sbutton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/sg"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>