<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BookingScreen1">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="207dp"
        android:layout_height="213dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dds" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="174dp"
        android:layout_height="64dp"
        android:text="@string/bs"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ncg" />

    <androidx.cardview.widget.CardView
        android:layout_width="381dp"
        android:layout_height="276dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:cardBackgroundColor="@color/screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="348dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:text="@string/edate"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText5"
            android:layout_width="348dp"
            android:layout_height="58dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/d"
            android:inputType="datetime" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="348dp"
            android:layout_height="47dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="140dp"
            android:background="@color/white"
            android:text="@string/hms"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="362dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="195dp"
            android:ems="10"
            android:hint="@string/hms"
            android:inputType="number" />

        <Button
            android:id="@+id/button7"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="280dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/book"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFDFD"
        android:contentDescription="Speaker button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/homeb" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFDFD"
        android:contentDescription="Speaker button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/notib" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFDFD"
        android:contentDescription="Speaker button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/belb" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFDFD"
        android:contentDescription="Speaker button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@drawable/userb" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="312dp"
        android:layout_height="131dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:maxLines="5"
            android:padding="16dp"
            android:text="@string/near"
            android:textColor="#000000"
            android:textSize="23dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>